--- a/quiz_app_frontend/package.json
+++ b/quiz_app_frontend/package.json
@@ -10,8 +10,12 @@
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.1.2",
+    "axios": "^1.8.1",
+    "axois": "^0.0.1-security",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "firebaseui": "^6.1.0",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.475.0",
     "next": "15.1.6",
     "react": "^19.0.0",
